--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="mailto:msurendhar8815@gmail.com" class="form" data-form method="post" >
+          <form action="mailto:kishorekumararcot@gmail.com" class="form" data-form method="post" >
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full Name" required data-form-input>
