skills are updated

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           <ul class="skills-list content-card">
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">React JS</h5>
+                <h5 class="h5">Flutter/h5>
                 <data value="80">70%</data>
               </div>
               <div class="skill-progress-bg">
@@ -324,7 +324,7 @@
             </li>
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">Version Control </h5>
+                <h5 class="h5">Dart </h5>
                 <data value="70">80%</data>
               </div>
               <div class="skill-progress-bg">
@@ -333,7 +333,7 @@
             </li>
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">Vanilla Javascript</h5>
+                <h5 class="h5">Java</h5>
                 <data value="90">70%</data>
               </div>
               <div class="skill-progress-bg">
@@ -342,7 +342,7 @@
             </li>
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">Material UI</h5>
+                <h5 class="h5">Python</h5>
                 <data value="50">80%</data>
               </div>
               <div class="skill-progress-bg">
@@ -351,7 +351,7 @@
             </li>
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">Bootstrap</h5>
+                <h5 class="h5">Web development</h5>
                 <data value="50">80%</data>
               </div>
               <div class="skill-progress-bg">
