--- a/index.html
+++ b/index.html
@@ -315,8 +315,17 @@
           <ul class="skills-list content-card">
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">Flutter/h5>
+                <h5 class="h5">Flutter</h5>
                 <data value="80">70%</data>
+              </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
+              </div>
+            </li>
+		  <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Firebase</h5>
+                <data value="70">70%</data>
               </div>
               <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 70%;"></div>
