resume skills updated

--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
         </header>
 
         
-          <a href="assets/resume/metta_resume.pdf" 
-          download="assets/resume/metta_resume.pdf" class="download-btn">
+          <a href="assets/resume/kishore_resume.pdf" 
+          download="assets/resume/kishore_resume.pdf" class="download-btn">
             Download Resume
           </a>
 
@@ -297,12 +297,11 @@
 
           <ol class="timeline-list">
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Front-end Developer</h4>
-              <span>2022/9 - 2023/2</span>
+              <h4 class="h4 timeline-item-title">Software Developer Intern</h4>
+              <span>Jun/2023 - Dec/2023</span>
               <p class="timeline-text">
                 <!-- Worked as a Front-end Developer in a agro based project (FARMENIENCE) under CEG Tech Forum(CTF). -->
-				I collaborated on a project to create a new website for my college, where I contributed my skills as a front-end developer to design and develop a modern, user-friendly interface.
-              </p>
+Collaborated in developing cross-platform mobile apps from scratch, integrating Firebase for optimal performance.              </p>
             </li>
           </ol>
 
@@ -315,8 +314,8 @@
           <ul class="skills-list content-card">
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">Flutter</h5>
-                <data value="80">70%</data>
+                <h5 class="h5">Django</h5>
+                <data value="80">80%</data>
               </div>
               <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 70%;"></div>
@@ -324,7 +323,7 @@
             </li>
 		  <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">Firebase</h5>
+                <h5 class="h5">Flutter</h5>
                 <data value="70">70%</data>
               </div>
               <div class="skill-progress-bg">
@@ -333,7 +332,7 @@
             </li>
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">Dart </h5>
+                <h5 class="h5">Python</h5>
                 <data value="70">80%</data>
               </div>
               <div class="skill-progress-bg">
@@ -351,11 +350,20 @@
             </li>
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">Python</h5>
-                <data value="50">80%</data>
+                <h5 class="h5">REST API</h5>
+                <data value="50">90%</data>
               </div>
               <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 80%;"></div>
+              </div>
+            </li>
+	   <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Postgresql</h5>
+                <data value="90">70%</data>
+              </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
               </div>
             </li>
             <li class="skills-item">
