--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </figure>
         <div class="info-content">
           <h1 class="name" title="Metta Surendhar"> Kishore Kumar</h1>
-          <p class="title">Front-end developer</p>
+          <p class="title">Artificial Intelligence Aspirant</p>
         </div>
         <button class="info_more-btn" data-sidebar-btn>
           <span>Show Contacts</span>
@@ -582,7 +582,7 @@ Collaborated in developing cross-platform mobile apps from scratch, integrating 
             <li class="skill-list">
               <a href="https://reactjs.org/" class="skill-link" target="blank"> 
                 <ion-icon name="logo-react"></ion-icon>
-                <p class="skill-text">ReactJS</p>
+                <p class="skill-text">Django</p>
               </a>
             </li>
             <li class="skill-list">
@@ -703,86 +703,7 @@ Collaborated in developing cross-platform mobile apps from scratch, integrating 
           </ul>
 
         </section>
-		
-        <!--
-          - service
-        -->
-
-        <section class="service">
-
-          <h3 class="h3 service-title">Web Development Skills</h3>
-
-          <ul class="service-list">
-
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images/htmllogo.png
-                " alt="design icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Html</h4>
-
-                <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
-                </p>
-              </div>
-
-            </li>
-
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images/csslogo.png" alt="Web development icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Css</h4>
-
-                <p class="service-item-text">
-                  High-quality development of sites at the professional level.
-                </p>
-              </div>
-
-            </li>
-
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images/jslogo.png" alt="mobile app icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Java Script</h4>
-
-                <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
-                </p>
-              </div>
-
-            </li>
-
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images/bslogo.png" alt="camera icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Bootstrap</h4>
-
-                <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
-                </p>
-              </div>
-
-            </li>
-
-          </ul>
-
-        </section>
-
+		 
 
         <!--
           - testimonials
