--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ Collaborated in developing cross-platform mobile apps from scratch, integrating 
             </li>
             <li class="skill-list">
               <a href="https://reactjs.org/" class="skill-link" target="blank"> 
-                <ion-icon name="logo-Django"></ion-icon>
+                <img src="assets/images/django.png">
                 <p class="skill-text">Django</p>
               </a>
             </li>
