--- a/index.html
+++ b/index.html
@@ -589,26 +589,26 @@ Collaborated in developing cross-platform mobile apps from scratch, integrating 
             <li class="skill-list">
               <a href="https://getbootstrap.com/" class="skill-link" target="blank"> 
                 <svg viewBox="0 0 576 512" height="70px" width="70px" xmlns="http://www.w3.org/2000/svg"><path d="M333.5,201.4c0-22.1-15.6-34.3-43-34.3h-50.4v71.2h42.5C315.4,238.2,333.5,225,333.5,201.4z M517,188.6 c-9.5-30.9-10.9-68.8-9.8-98.1c1.1-30.5-22.7-58.5-54.7-58.5H123.7c-32.1,0-55.8,28.1-54.7,58.5c1,29.3-0.3,67.2-9.8,98.1 c-9.6,31-25.7,50.6-52.2,53.1v28.5c26.4,2.5,42.6,22.1,52.2,53.1c9.5,30.9,10.9,68.8,9.8,98.1c-1.1,30.5,22.7,58.5,54.7,58.5h328.7 c32.1,0,55.8-28.1,54.7-58.5c-1-29.3,0.3-67.2,9.8-98.1c9.6-31,25.7-50.6,52.1-53.1v-28.5C542.7,239.2,526.5,219.6,517,188.6z M300.2,375.1h-97.9V136.8h97.4c43.3,0,71.7,23.4,71.7,59.4c0,25.3-19.1,47.9-43.5,51.8v1.3c33.2,3.6,55.5,26.6,55.5,58.3 C383.4,349.7,352.1,375.1,300.2,375.1z M290.2,266.4h-50.1v78.4h52.3c34.2,0,52.3-13.7,52.3-39.5 C344.7,279.6,326.1,266.4,290.2,266.4z"></path></svg>
-                <p class="skill-text">Bootstrap</p>
+                <p class="skill-text">SQL</p>
               </a>
             </li>
             <li class="skill-list">
               <a href="https://mui.com/" class="skill-link" target="blank"> 
                 <svg viewBox="0 0 24 24" height="60px" width="60px" xmlns="http://www.w3.org/2000/svg"><path d="M0 2.475v10.39l3 1.733V7.67l6 3.465 6-3.465v3.465l-6 3.463v3.464l6 3.463 9-5.195V9.402l-3 1.733v3.463l-6 3.464-3-1.732 6-3.465V2.475L9 7.67 0 2.475zm24 0l-3 1.73V7.67l3-1.732V2.474Z"></path></svg>
-                <p class="skill-text">Material ui</p>
+                <p class="skill-text">Flutter</p>
               </a>
             </li>
 
             <li class="skill-list">
               <a href="https://tailwindcss.com/" class="skill-link" target="blank"> 
                 <svg viewBox="0 0 24 24" height="60px" width="60px" xmlns="http://www.w3.org/2000/svg"><path d="M12.001,4.8c-3.2,0-5.2,1.6-6,4.8c1.2-1.6,2.6-2.2,4.2-1.8c0.913,0.228,1.565,0.89,2.288,1.624 C13.666,10.618,15.027,12,18.001,12c3.2,0,5.2-1.6,6-4.8c-1.2,1.6-2.6,2.2-4.2,1.8c-0.913-0.228-1.565-0.89-2.288-1.624 C16.337,6.182,14.976,4.8,12.001,4.8z M6.001,12c-3.2,0-5.2,1.6-6,4.8c1.2-1.6,2.6-2.2,4.2-1.8c0.913,0.228,1.565,0.89,2.288,1.624 c1.177,1.194,2.538,2.576,5.512,2.576c3.2,0,5.2-1.6,6-4.8c-1.2,1.6-2.6,2.2-4.2,1.8c-0.913-0.228-1.565-0.89-2.288-1.624 C10.337,13.382,8.976,12,6.001,12z"></path></svg>
-                <p class="skill-text">Tailwind css</p>
+                <p class="skill-text">REST API</p>
               </a>
             </li>
             <li class="skill-list">
               <a href="https://sass-lang.com/" class="skill-link" target="blank"> 
                 <ion-icon name="logo-sass"></ion-icon>
-                <p class="skill-text">Sass</p>
+                <p class="skill-text">Machine Learning</p>
               </a>
             </li>
             <li class="skill-list">
